; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/postmaster/extr_autovacuum.c_AutoVacuumShmemInit.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/postmaster/extr_autovacuum.c_AutoVacuumShmemInit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32, i32*, i32, i64 }
%struct.TYPE_4__ = type { i32 }

@.str = private unnamed_addr constant [16 x i8] c"AutoVacuum Data\00", align 1
@AutoVacuumShmem = common dso_local global %struct.TYPE_5__* null, align 8
@IsUnderPostmaster = common dso_local global i32 0, align 4
@NUM_WORKITEMS = common dso_local global i32 0, align 4
@autovacuum_max_workers = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @AutoVacuumShmemInit() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca i32, align 4
  %4 = call i32 (...) @AutoVacuumShmemSize()
  %5 = call i64 @ShmemInitStruct(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 %4, i32* %1)
  %6 = inttoptr i64 %5 to %struct.TYPE_5__*
  store %struct.TYPE_5__* %6, %struct.TYPE_5__** @AutoVacuumShmem, align 8
  %7 = load i32, i32* @IsUnderPostmaster, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %56, label %9

9:                                                ; preds = %0
  %10 = load i32, i32* %1, align 4
  %11 = icmp ne i32 %10, 0
  %12 = xor i1 %11, true
  %13 = zext i1 %12 to i32
  %14 = call i32 @Assert(i32 %13)
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** @AutoVacuumShmem, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 4
  store i64 0, i64* %16, align 8
  %17 = load %struct.TYPE_5__*, %struct.TYPE_5__** @AutoVacuumShmem, align 8
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %17, i32 0, i32 0
  %19 = call i32 @dlist_init(i32* %18)
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** @AutoVacuumShmem, align 8
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 3
  %22 = call i32 @dlist_init(i32* %21)
  %23 = load %struct.TYPE_5__*, %struct.TYPE_5__** @AutoVacuumShmem, align 8
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %23, i32 0, i32 2
  store i32* null, i32** %24, align 8
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** @AutoVacuumShmem, align 8
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = load i32, i32* @NUM_WORKITEMS, align 4
  %29 = sext i32 %28 to i64
  %30 = mul i64 4, %29
  %31 = trunc i64 %30 to i32
  %32 = call i32 @memset(i32 %27, i32 0, i32 %31)
  %33 = load %struct.TYPE_5__*, %struct.TYPE_5__** @AutoVacuumShmem, align 8
  %34 = bitcast %struct.TYPE_5__* %33 to i8*
  %35 = call i32 @MAXALIGN(i32 32)
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds i8, i8* %34, i64 %36
  %38 = bitcast i8* %37 to %struct.TYPE_4__*
  store %struct.TYPE_4__* %38, %struct.TYPE_4__** %2, align 8
  store i32 0, i32* %3, align 4
  br label %39

39:                                               ; preds = %52, %9
  %40 = load i32, i32* %3, align 4
  %41 = load i32, i32* @autovacuum_max_workers, align 4
  %42 = icmp slt i32 %40, %41
  br i1 %42, label %43, label %55

43:                                               ; preds = %39
  %44 = load %struct.TYPE_5__*, %struct.TYPE_5__** @AutoVacuumShmem, align 8
  %45 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %44, i32 0, i32 0
  %46 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %47 = load i32, i32* %3, align 4
  %48 = sext i32 %47 to i64
  %49 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %46, i64 %48
  %50 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %49, i32 0, i32 0
  %51 = call i32 @dlist_push_head(i32* %45, i32* %50)
  br label %52

52:                                               ; preds = %43
  %53 = load i32, i32* %3, align 4
  %54 = add nsw i32 %53, 1
  store i32 %54, i32* %3, align 4
  br label %39

55:                                               ; preds = %39
  br label %59

56:                                               ; preds = %0
  %57 = load i32, i32* %1, align 4
  %58 = call i32 @Assert(i32 %57)
  br label %59

59:                                               ; preds = %56, %55
  ret void
}

declare dso_local i64 @ShmemInitStruct(i8*, i32, i32*) #1

declare dso_local i32 @AutoVacuumShmemSize(...) #1

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @dlist_init(i32*) #1

declare dso_local i32 @memset(i32, i32, i32) #1

declare dso_local i32 @MAXALIGN(i32) #1

declare dso_local i32 @dlist_push_head(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
